# NuDesktop_Shell

./: AppItem.qml  CMakeLists.txt  CMakeLists.txt.user.1d7ad25  LauncherDesktop.qml  LauncherItem.qml  LauncherItemHorizontal.qml  LauncherMobile.qml  README.md  ToggleItem.qml  WindowSelector.qml  WindowSelectorItem.qml  appList.cpp  appList.h  clickItem.cpp  clickItem.h  clockItem.cpp  clockItem.h  config.cpp  config.h  fallback.json  launcher.cpp  launcher.h  main.cpp  main.qml  panel.cpp  panel.h  panel.qml  qml.qrc  window.cpp  window.h  window.qml  windowIconProvider.cpp  windowIconProvider.h  windowModel.cpp  windowModel.h  windowSelector.cpp  windowSelector.h  windowSelectorItem.cpp  windowSelectorItem.h
